--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.input_label {
+  @apply block mb-2 text-sm font-medium text-gray-900;
+}
+.input_field {
+  @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:border-blue-500 block w-full p-2.5 focus:outline-none;
+}
