--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,3 +8,7 @@
 .input_field {
   @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:border-blue-500 block w-full p-2.5 focus:outline-none;
 }
+
+.input_button {
+  @apply mt-4 w-full text-white bg-purple-600 hover:bg-purple-700 font-medium rounded-lg text-sm px-5 py-2.5 text-center flex justify-center items-center;
+}
