--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,3 +12,8 @@
 .input_button {
   @apply mt-4 w-full text-white bg-purple-600 hover:bg-purple-700 font-medium rounded-lg text-sm px-5 py-2.5 text-center flex justify-center items-center;
 }
+
+input[type="file"]::-webkit-file-upload-button,
+input[type="file"]::file-selector-button {
+  @apply hidden;
+}
