--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,3 +17,7 @@ input[type="file"]::-webkit-file-upload-button,
 input[type="file"]::file-selector-button {
   @apply hidden;
 }
+
+.dropdown:hover .dropdown-menu {
+  display: block;
+}
