--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,23 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-.input_label {
-  @apply block mb-2 text-sm font-medium text-gray-900;
-}
-.input_field {
-  @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:border-blue-500 block w-full p-2.5 focus:outline-none;
-}
-
-.input_button {
-  @apply mt-4 w-full text-white bg-purple-600 hover:bg-purple-700 font-medium rounded-lg text-sm px-5 py-2.5 text-center flex justify-center items-center;
-}
-
-input[type="file"]::-webkit-file-upload-button,
-input[type="file"]::file-selector-button {
-  @apply hidden;
-}
-
-.dropdown:hover .dropdown-menu {
-  display: block;
+body {
+  margin: 0;
 }
